# Stock_Tracker

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
templates/: index.html
